--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
         However, this code translates to something very simple to read and understand. 
         <code>
           var aClass = (arg) => {
-            return function() {
-              console.log(arg);
-            }
+          return function() {
+          console.log(arg);
+          }
           }
         </code>
         </p>
       </section>
       <footer>
+        <a href="https://js.org" target="_blank" title="JS.ORG | JavaScript Community">
+          <img src="https://logo.js.org/dark_horz.png" width="102" alt="JS.ORG Logo"/></a>
+        <!-- alternatives [bright|dark]_[horz|vert|tiny].png (width[horz:102,vert:50,tiny:77]) -->
         <p>This project is maintained by <a href="https://github.com/ohmfox">ohmfox</a></p>
       </footer>
     </div>
