Adding some changes

--- a/index.html
+++ b/index.html
@@ -3,49 +3,59 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Marxist.js.org by ohmfox</title>
+    <title>Marxist JS - The Classless Javascript Manifesto</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.css">
     <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
+    <div class="container">
       <header>
         <h1>Marxist.js.org</h1>
-        <p>The Classless Javascript movement</p>
+        <p>The Classless Javascript Manifesto</p>
       </header>
       <section>
         <h2>What is this?</h2>
         <p>
-        ES6 added the <code>class</code> keyword to Javascript. 
+        ES6 added the <code class="language-js">class</code> keyword to Javascript. 
         We think that this adds far too much complexity to Javascript
         and that the built in "class-like" abilities of Javascript are much more clear and powerful.
         </p>
         <h2>Let's see an example</h2>
         <p>
         Someone recently pointed me to this code:
-        <code>
-          var aClass = arg => class {
-          constructor() {
-          console.log(arg);
-          }
-          };
-          new (aClass("ey"))(); //prints "ey" and retuns an object
-        </code>
-        At first glance this looks pretty weird, since there is a lot of obfuscation happening here.
-        However, this code translates to something very simple to read and understand. 
-        <code>
-          var aClass = (arg) => {
-          return function() {
-          console.log(arg);
-          }
-          }
-        </code>
         </p>
+        <pre>
+        <code class="language-js">
+          var aClass = arg => class {
+            constructor() {
+              console.log(arg);
+            }
+          };
+          new (aClass("ey"))(); //prints "ey" and returns an object
+        </code>
+        </pre>
+        <p>
+        At first glance this looks pretty weird. There is a closure, an arrow function, 
+        a class keyword, 
+        However, this code translates to something very simple to read and understand. 
+        </p>
+        <pre>
+        <code class="language-js">
+          var aClass = (arg) => {
+            return function() {
+              console.log(arg);
+              return {};
+            }
+          }
+          var aClassReturn = aClass("ey"); // returns a function
+          var instanceOfaClassReturn = new aClassReturn(); // returns an object and prints "ey";
+        </code>
+        </pre>
       </section>
       <footer>
         <a href="https://js.org" target="_blank" title="JS.ORG | JavaScript Community">
@@ -55,5 +65,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
   </body>
 </html>
