--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
         <p>The Classless Javascript Manifesto</p>
       </header>
       <section>
-        <h2>Down with Javascript classes!</h2>
+        <h2>Javascript Classes</h2>
         <p>
         ES6 added the <code class="language-js">class</code> keyword to Javascript. 
         This syntax is essentially a wrapper for the [[Prototype]] chain to make a more seamless transition
         for developers used to other object oriented languages. It abstracts out the conventional <code>.prototype</code>
         boilerplate.
-        We are proposing that Javascript developers avoid the <code class="language-js">class</code> keyword
-        in favor of clearer alternatives.
         </p>
       </section>
       <section>
         <h2>So what are you saying?</h2>
-        <p>Basically, there are lots of good reasons not to use the Javascript <code class="language-js">class</code> 
+        <p>
+        We are proposing that Javascript developers avoid the <code class="language-js">class</code> keyword
+        in favor of clearer alternatives.
+        Basically, there are lots of good reasons not to use the Javascript <code class="language-js">class</code> 
         keyword but the most important is that the <code class="language-js">class</code> keyword hides a lot of the
         behind the scenes parts of Javascript and abstracts away from what is actually happening. Here is the real kicker</p>
         <strong>Classical inheritance (like classes) is not the same as Prototypal inheritance.</strong>
