--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <footer>
         <a href="https://js.org" target="_blank" title="JS.ORG | JavaScript Community">
           <img src="https://logo.js.org/dark_horz.png" width="102" alt="JS.ORG Logo"/></a>
-        <p>This project is maintained by <a href="https://github.com/ohmfox">ohmfox</a>. Want to help? <a href="https://github.com/ohmfox/marxistjs">Make a pull request!</a></p>
+        <p>This project is maintained by <a href="https://github.com/wuz">wuz</a>. Want to help? <a href="https://github.com/ohmfox/marxistjs">Make a pull request!</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
